# autotools-tutorial

./: Makefile  Makefile.am  Makefile.in  Makefile.md  README.md  acinclude.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3t
src/: Makefile.am  Makefile.in
src/client/: Makefile.am  Makefile.in  client.c  client_test.cc  jupiterclient.h
src/common/: Makefile.am  Makefile.in  caculate.c  jupcommon.h  print.c
src/jupiter/: Makefile  Makefile.am  Makefile.in
src/jupiter/common/: Makefile  Makefile.am  Makefile.in  jupcommon.h  print.c
src/jupiter/main/: Makefile  Makefile.am  Makefile.in  main.c
src/main/: Makefile.am  Makefile.in  main.c
