#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([jupiter], [1.0.0], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([src/main/main.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Defined in acinclude.m4
AC_CHECK_EXTRA_OPTIONS

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/client/Makefile
                 src/common/Makefile
                 src/main/Makefile])
AC_OUTPUT
